# IOT_Queue_Management

./: .gitignore  README.md  database.rules.json  firebase.json
.firebase/: hosting.Zmx1dHRlcl9hcHAvYnVpbGQvd2Vi.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
Documentation/: firebase_integration_guide.md
ESP32/: QueueESP32.cpp  QueueManager.ino  SECRETS.h  config.h  parameters.h  queue_logic.ino
ESP32/Queue/: QueueManager.cpp  QueueManager.h
flutter_app/: .firebaserc  firestore.rules  pubspec.yaml
flutter_app/.firebase/: hosting.YnVpbGRcd2Vi.cache
flutter_app/dataconnect/: dataconnect.yaml
flutter_app/lib/: firebase_options.dart  main.dart
flutter_app/lib/components/: connectivity_example_page.dart  connectivity_indicator.dart  queue_components.dart
flutter_app/lib/constants/: app_constants.dart
flutter_app/lib/controllers/: queue_data.dart  queue_manager.dart  queue_repository.dart  queue_simulator.dart
flutter_app/lib/dataconnect_generated/: example.dart
flutter_app/lib/graphics/: hover_box.dart  queue_view.dart
flutter_app/lib/native/: queue_manager_ffi.dart  queue_manager_wasm.dart
flutter_app/lib/parameters/: app_parameters.dart  time_conversion_util.dart
flutter_app/lib/screens/: queue_screen.dart
flutter_app/lib/services/: connectivity_service.dart  firebase_queue_service.dart
flutter_app/lib/shared/: firebase_queue_service.dart  queue_logic.dart  queue_structures.dart
flutter_app/lib/simulation/: queue_manager.dart  queue_simulator.dart
flutter_app/lib/widgets/: animated_clock.dart  animated_waves.dart  hover_box.dart  queue_view.dart
flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/web/wasm/: queue_manager.wasm
functions/: README.md  package.json  tsconfig.json
functions/src/: index.ts
shared/: CMakeLists.txt
shared/cpp/: BUILD.md  CMakeLists.txt  FirebaseClient.cpp  FirebaseClient.h  FirebasePeopleStructureBuilder.cpp  FirebasePeopleStructureBuilder.h  FirebaseStructureBuilder.cpp  FirebaseStructureBuilder.h  Person.cpp  Person.h  QueueManager.cpp  QueueManager.h  QueueSimulator.cpp  QueueSimulatorFarthest.cpp  QueueSimulatorShortest.cpp  QueueStructures.cpp  QueueStructures.h  SimpleHttpClient.cpp  SimpleHttpClient.h  ThroughputTracker.cpp  ThroughputTracker.h  build_wasm.bat  build_wasm.ps1  build_wasm.sh  cpp.ino  libqueue_manager_shared.dylib  parameters.h  queue_sim
shared/cpp/firebase/: FirebaseClient.cpp  FirebaseClient.h  FirebasePeopleStructureBuilder.h  FirebaseStructureBuilder.h
shared/cpp/http/: SimpleHttpClient.cpp
shared/cpp/queueManagment/: QueueManager.cpp  QueueManager.h  ThroughputTracker.cpp
shared/firebase/: FirebaseClient.h
shared/queueManagment/: QueueManager.cpp  QueueManager.h
shared/simulation_output/: firebase_export_20251025_201814.json  firebase_export_20251025_210146.json  firebase_export_20251025_213524.json  firebase_export_20251025_233836.json  graph_script.py  unified_simulation_data.csv  unified_simulation_data.json
simulations/: QueueSimulatorFarthest.cpp  QueueSimulatorProject.cpp  QueueSimulatorShortest.cpp  UnifiedQueueSimulator.cpp
